tests/ui/associated-type-bounds/conflicting-bounds-different-generics-complex.stderr
error: conflicting associated type bindings for `Assoc`
  --> $DIR/conflicting-bounds-different-generics-complex.rs:24:24
   |
LL |     require_trait::<D, dyn Sub<D>>();
   |                        ^^^^^^^^^^
   |
   = note: `Assoc` (in `Super<<D as Dummy>::DummyAssoc2>`) is specified to be `i64`
   = note: `Assoc` (in `Super<<D as Dummy>::DummyAssoc1>`) is also specified to be `i32`

error: aborting due to 1 previous error

